# tkgocryptfs

./: .gitignore  README.md  makefile  pyproject.toml
share/applications/: tkgocryptfs.desktop
tkgocryptfs/: __init__.py  application.py  functions.py  tk_application.py  version.py
tkgocryptfs/linux/share/man/man1/: tkgocryptfs.1
